--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
         <dependency>
             <groupId>net.kigawa.kutil</groupId>
             <artifactId>kutil</artifactId>
-            <version>1.1terminal</version>
+            <version>1.0dev</version>
         </dependency>
         <dependency>
             <groupId>net.kigawa.kutil</groupId>
             <artifactId>log</artifactId>
-            <version>1.0terminal</version>
+            <version>1.0dev</version>
         </dependency>
         <dependency>
             <groupId>jline</groupId>
